ajout pion peut bouger
